// Copyright 2020 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package recipe_modules.recipe_engine.step.tests;

import "go.chromium.org/luci/buildbucket/proto/build.proto";

message SubBuildInputProps {
  message Path {
    string base = 1;
    string file = 2;
  }

  Path output_path = 1;
  .buildbucket.v2.Build input_build = 2;
  bool infra_step = 3;
  .buildbucket.v2.Build expected_sub_build = 4;

  bool legacy = 5;
}

